...
            android:text="Medium Text"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/change_direction_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/transport_type_icon"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
...
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@id/from_label"
            android:layout_toStartOf="@+id/change_direction_image_view"
            android:backgroundTint="@color/colorPrimary">

            <TextView
                android:id="@+id/departure_station_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="Medium Text"
...
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@id/to_label"
            android:layout_toStartOf="@+id/change_direction_image_view"
            android:backgroundTint="@color/colorPrimary">

            <TextView
                android:id="@+id/destination_station_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:lines="1"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:lines="1"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp"
                    android:text="Tai O"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </android.support.v7.widget.CardView>

            <ImageView
                android:layout_width="0dp"
...
            android:layout_below="@id/to_label"
            android:layout_marginTop="16dp"
            android:text="@string/showFullTimetable"
            android:textColor="@color/black" />

        <Switch
            android:id="@+id/show_full_timetable_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/show_all_transports_text_view"
            android:checked="false" />

...
