...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ywca.pentref.fragments.TransportationFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/transport_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>

